Corrected TodoItemResourceRestAssuredIT in restapi project.